--- a/pizza/CMakeLists.txt
+++ b/pizza/CMakeLists.txt
@@ -3,4 +3,4 @@ project(06.Semaforos)
 
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -DPIZZA")
-add_executable(pizza main.cc Semaforo.cpp Machine.cpp Machine.h Constants.h Cortadora.cpp Cortadora.h Rallador.cpp Rallador.h Amasador.cpp Amasador.h)
+add_executable(pizza main.cc Semaforo.cpp Machine.cpp Machine.h Constants.h Cortadora.cpp Cortadora.h Rallador.cpp Rallador.h Amasador.cpp Amasador.h Cocinero.cpp Cocinero.h Horno.cpp Horno.h)
